1. Fix MVN build issue Cause: Failed test case. Fix: CRLF handling in XML transform is corrected to LF
2. Fix MVN package issue during rerun
Cause: lombok annotations were not resolved in test cases
Fix: lombok uses unnamed classes. So, the compiler flags are updated

- General code clean up
- Updated README.md for v2.1.1
- Updated .gitignore